Fix timeout error tooltip and alert layout problem

--- a/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/backend-insight-chart/BackendInsightChart.module.scss
+++ b/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/backend-insight-chart/BackendInsightChart.module.scss
@@ -2,6 +2,8 @@
     flex: 1;
     min-height: 0;
     position: relative;
+    isolation: isolate;
+
     display: grid;
     gap: 0.75rem;
 
